# Darwin0.1

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  benchmark_bsub.json  benchmark_mjan.json  benchmark_report.json  benchmark_v02.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
bsub_output/: GCF_000009045.1_ASM904v1_genomic.gff3  GCF_000009045.1_ASM904v1_genomic_features.tsv  GCF_000009045.1_ASM904v1_genomic_proteins.faa  GCF_000009045.1_ASM904v1_genomic_summary.json
darwin_vs_ncbi/: GCF_000005845.2_ASM584v2_genomic.gff3  GCF_000005845.2_ASM584v2_genomic_summary.json
darwin_vs_ncbi_pfam/: GCF_000005845.2_ASM584v2_genomic.gff3  GCF_000005845.2_ASM584v2_genomic_proteins.faa  GCF_000005845.2_ASM584v2_genomic_summary.json
ecoli_benchmark/: md5sum.txt
ecoli_benchmark/ncbi_dataset/data/: assembly_data_report.jsonl  dataset_catalog.json
ecoli_v02_output/: GCF_000005845.2_ASM584v2_genomic.gff3  GCF_000005845.2_ASM584v2_genomic_features.tsv  GCF_000005845.2_ASM584v2_genomic_proteins.faa  GCF_000005845.2_ASM584v2_genomic_summary.json
ecoli_v04_output/: GCF_000005845.2_ASM584v2_genomic.gff3  GCF_000005845.2_ASM584v2_genomic_features.tsv  GCF_000005845.2_ASM584v2_genomic_proteins.faa  GCF_000005845.2_ASM584v2_genomic_summary.json
mjan_benchmark/: genomic.gff
mjan_output/: GCF_000091665.1_ASM9166v1_genomic.fna  GCF_000091665.1_ASM9166v1_genomic.gbk  GCF_000091665.1_ASM9166v1_genomic.gff3  GCF_000091665.1_ASM9166v1_genomic_features.tsv  GCF_000091665.1_ASM9166v1_genomic_proteins.faa  GCF_000091665.1_ASM9166v1_genomic_summary.json
mjan_output/.darwin_checkpoints/: genes_called.json  proteins_found.json  qc_completed.json
mnt/.claude/: .claude.json  .credentials.json
mnt/.claude/backups/: .claude.json.backup.1773179448377  .claude.json.backup.1773179579489  .claude.json.backup.1773191724174  .claude.json.backup.1773191921688  .claude.json.backup.1773243577304
mnt/.claude/debug/: 19d26e68-0072-46a6-a62e-80438e620471.txt  2a15fffb-8038-4f52-86a1-7e234d5011a8.txt  2e944023-c8ac-43f2-9562-069b34bca169.txt  36d78e91-60c6-49af-9bfd-8145008b8d5f.txt  3f6df061-fab2-41ac-b9b4-c110af54c030.txt  4135cbc3-92a5-49c3-9c85-04b7fe0b3f5d.txt  483887f0-1aec-4837-bb64-8676fe7cd1f3.txt  532df3e6-1e94-4127-85d5-e7ad9a7ff468.txt  5844cb2c-8e02-4a86-b652-403024f66eed.txt  6e832ab4-5e27-496b-93cb-0c8fbf4a1d9f.txt  930697b8-6787-44ec-be06-856657f33e98.txt  95df27dd-d254-4e4c-a14c-3e0de247f396.txt  99f61d62-a220-4513-8067-9712f1f2803e.txt  a578306c-1cf4-4ecb-86c9-d3fc24553eb7.txt  a8d18056-2f62-410a-ace7-7420c00328d0.txt  aeea5117-b03c-4cef-af1e-d4b4d3ffad46.txt  b362fe66-b812-40b0-a3e3-12285accaf86.txt  b9876746-0f47-4362-bbbe-37e441962137.txt  ba2933dd-519d-421e-b10c-7fe40f91a9e9.txt  baf82bcb-6ca2-499b-88d8-f9bc11d15beb.txt  c24b3706-02d8-4897-8f4e-52fa713b737e.txt  c2972bba-e8a6-41a6-8db7-af0fc3809b10.txt  dfc53c60-3a0e-4006-9bde-00a293717364.txt  f5447526-e6a6-48e7-b370-aa115b3aadf5.txt  f9796269-7448-4d53-b158-c0fbcd254430.txt  ffa6d08d-ae28-48e9-b453-cc256e85d269.txt  latest
mnt/DARWIN/: Dockerfile  Makefile  README.md
mnt/outputs/: .pre-commit-config.yaml  Dockerfile  pyproject-snippet.toml
scripts/: benchmark.py  benchmark_multi.sh  debug_pyhmmer.py  debug_pyhmmer2.py  debug_pyhmmer3.py
src/darwin/: __init__.py  cli.py  models.py
src/darwin/agents/: __init__.py  annotator.py  base.py  code_checker.py  context.py  page_rational.py  processor.py  researcher.py  scrutinizer.py  synthesizer.py  uploader.py
src/darwin/annotators/: __init__.py  aragorn.py  barrnap.py  base.py  prodigal.py  pyhmmer_annotator.py
src/darwin/api/: __init__.py  app.py  jobs.py
src/darwin/council/: __init__.py  orchestrator.py
src/darwin/flora/: __init__.py  amr_plant.py  aragorn.py  barrnap.py  base.py  crispard.py  foldseek_plant.py  gecco_plant.py  interpro_plant.py  isescan_plant.py  minigene.py  mob_suite_plant.py  operons.py  phispy_plant.py  phylo_16s.py  prodigal.py  (+2 more)
tests/: conftest.py
tests/unit/: test_api.py  test_domains.py  test_fasta.py  test_models.py  test_new_organisms.py  test_output.py  test_rocks.py  test_water.py
(+110 files in other folders)
