[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "darwin-annotator"
version = "0.1.0"
description = "Prokaryotic genome annotator — a self-sustaining ecosphere"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Roman Javorek", email = "rtjavorek@gmail.com" }]
keywords = ["bioinformatics", "genome", "annotation", "prokaryote"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "biopython>=1.81",
    "pyhmmer>=0.10",
    "click>=8.1",
    "rich>=13.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.5",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.6",
]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.25",
]

[project.scripts]
darwin = "darwin.sunlight.cli:cli"

[project.urls]
Homepage = "https://github.com/FREEQUENCY1111/Darwin0.1"
Repository = "https://github.com/FREEQUENCY1111/Darwin0.1"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
